--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <p> My Angular Application is Gone </p>
 </body>
 </html>
